--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="notifications">
             <img src="Assets/bell.svg" alt="Notificações" id="bell">
-            <img src="Assets/message-circle.svg" alt="Mensagens">
+            <img src="Assets/message.svg" alt="Mensagens">
             <img src="Assets/menu.svg" alt="Menu" class="menu">
         </div>
     </div>
@@ -31,11 +31,11 @@
   <section class="secao-primaria">
         <div class="transparencia">
             <div class="sp__conteiner">
-            <div class="sp__conteudo">
-                <img src="Assets/logo.svg" alt="Logo Banner" class="sp__logo">
-                <p class="sp__paragrafo">Estados Unidos, 1899. O fim da era do velho oeste começou, e as autoridades estão caçando as últimas gangues de fora da lei que restam. Os que não se rendem, nem sucumbem, são mortos.</p>
-                <button class="sp__botao">COMPRE AGORA</button>
-            </div>
+                <div class="sp__conteudo">
+                    <img src="Assets/logo.svg" alt="Logo Banner" class="sp__logo">
+                    <p class="sp__paragrafo">Estados Unidos, 1899. O fim da era do velho oeste começou, e as autoridades estão caçando as últimas gangues de fora da lei que restam. Os que não se rendem, nem sucumbem, são mortos.</p>
+                    <button class="sp__botao">COMPRE AGORA</button>
+                </div>
             </div>
         </div>
    </section> 
@@ -61,10 +61,12 @@
         </div>
     </section>
     <section class="secao-quarternaria">
-        <img src="Assets/1.png">
-        <img src="Assets/2.png">
-        <img src="Assets/3.png">
-        <img src="Assets/4.png" id="game-four">
+        <div class="sq__imagens">
+            <img src="Assets/1.png" class="sq__imagem">
+            <img src="Assets/2.png" class="sq__imagem">
+            <img src="Assets/3.png" class="sq__imagem">
+            <img src="Assets/4.png" id="game-four" class="sq__imagem">
+        </div>
     </section>
     <footer class="rodape">
         <img src="Assets/steam.svg" alt="Logo Steam" class="rodape__imagem">
