--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="perfil">
-        <img src="Assets/iuricode 1.png" alt="Perfil">
+        <img src="Assets/gajoy.png" alt="Perfil" class="perfil__imagem">
         <img src="Assets/arrow.svg" alt="Seta">
     </div>
   </header>  
