--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
     </section>
     <footer class="rodape">
         <img src="Assets/steam.svg" alt="Logo Steam" class="rodape__imagem">
-    </footer>
+    </footer>a
 </body>
 </html>
